# mcp-daytona-server

./: .env.example  .env.local  README.md  pyproject.toml  requirements.txt
src/: daytona_utils.py  main.py  mcp_server.py  pyproject.toml
src/mcp_daytona_server/: check_server.py  inspect_params.py  inspect_sdk.py  list_configs.py  main.py  mcp_server.py  test_client.py
